refactor from Arrays.asList to List.of because it holds immutable list with better performance